RESOLVED FIXED45865
[GTK] [REGRESSION] r67591 broke the testwebbackforwardlist API test and introduced a memory leak
https://bugs.webkit.org/show_bug.cgi?id=45865
Summary [GTK] [REGRESSION] r67591 broke the testwebbackforwardlist API test and intro...
Martin Robinson
Reported 2010-09-15 19:05:51 PDT
The backForwardList member is assigned from a constructor without calling adoptPlatformRef. This leads to the GObject having a reference count of 2 and the memory leaking.
Attachments
Patch for this issue (1.51 KB, patch)
2010-09-15 19:12 PDT, Martin Robinson
levin: review+
Martin Robinson
Comment 1 2010-09-15 19:12:16 PDT
Created attachment 67760 [details] Patch for this issue
Martin Robinson
Comment 2 2010-09-15 19:18:54 PDT
Note You need to log in before you can comment on or make changes to this bug.